# geopdp

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENCE.md  README.md  pyproject.toml  tasks.py
.github/workflows/: check-reqs.yml  ci.yml  test.yml
docs/: PRE_COMMIT.md
notebooks/: README.md  spatial_pdp_demo.ipynb
src/geopdp/: __init__.py  geometry.py  pdp.py  utils.py  visualization.py
src/geopdp/data/: __init__.py  sample_regions.geojson
tests/: test_geometry.py  test_pdp.py  test_utils.py  test_validation.py  test_visualization.py
