[project]
name = "geopdp"
version = "0.1.0"
description = "Spatial Partial Dependence Profiles for machine learning models. Compute and visualize how predictions vary across geographic regions."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Alex De Volder", email = "aldev11358@gmail.com"}
]
keywords = ["machine-learning", "gis", "geospatial", "pdp", "interpretability", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "geopandas>=0.14",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.4",
    "plotly>=5.20",
]

[project.urls]
Homepage = "https://github.com/adevol/geopdp"
Repository = "https://github.com/adevol/geopdp"
Issues = "https://github.com/adevol/geopdp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.4.0",
    "black>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geopdp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/geopdp",
    "tests",
    "pyproject.toml",
    "README.md",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
